⬇️ Downgrade Java from 12 to 8